fix bugs on iphone 1

--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@ canvas {
 #loadingScreen {
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: 99999999;
     position: fixed;
     top: 0;
     left: 0;
@@ -1384,6 +1384,7 @@ canvas {
     justify-content: center;
     align-content: center;
     padding: 10px;
+    z-index: 6;
 }
 
 #mainMap .swipe button {
